--- a/interface.html
+++ b/interface.html
@@ -72,9 +72,9 @@
                     <label>Image area colour</label>
                   </div>
                   <div class="col-sm-8">
-                    <div class="input-group">
-                      <div class="input-group-addon" style="background-color:{{color}}">&nbsp;&nbsp;&nbsp;</div>
-                      <input type="text" id="list-item-color-{{id}}" class="form-control list-item-color" value="{{color}}" {{#if imageConf}} disabled {{/if}}>
+                    <div class="input-group" colorpicker-component>
+                      <div class="input-group-addon"><i style="background-color:{{ color }}"></i></div>
+                      <input type="text" id="list-item-color-{{id}}" class="form-control list-item-color" value="{{color}}">
                     </div>
                   </div>
                 </div>
@@ -217,9 +217,9 @@
                 <label>Image area colour</label>
               </div>
               <div class="col-sm-8">
-                <div class="input-group">
-                  <div class="input-group-addon" style="background-color:#00abd2">&nbsp;&nbsp;&nbsp;</div>
-                  <input type="text" id ="list-item-color-\{{id}}" class="form-control list-item-color" value="#00abd2">
+                <div class="input-group" colorpicker-component>
+                  <div class="input-group-addon"><i style="background-color:#00abd2"></i></div>
+                  <input type="text" id="list-item-color-\{{id}}" class="form-control list-item-color" value="#00abd2">
                 </div>
               </div>
             </div>
