--- a/interface.html
+++ b/interface.html
@@ -53,7 +53,7 @@
 
                 <div class="form-group">
                   <div class="col-sm-4 control-label">
-                    <label>Image area colour</label>
+                    <label>Image area color</label>
                   </div>
                   <div class="col-sm-8">
                     <div class="input-group" colorpicker-component>
@@ -65,7 +65,7 @@
 
                 <div class="row">
                   <div class="col-xs-12">
-                    <p class="help-block">Adding an icon won't replace the chosen color. The colour will be shown underneath the icon.</p>
+                    <p class="help-block">Adding an icon won't replace the chosen color. The color will be shown underneath the icon.</p>
                   </div>
                 </div>
 
@@ -207,7 +207,7 @@
 
             <div class="form-group">
               <div class="col-sm-4 control-label">
-                <label>Image area colour</label>
+                <label>Image area color</label>
               </div>
               <div class="col-sm-8">
                 <div class="input-group" colorpicker-component>
@@ -219,7 +219,7 @@
 
             <div class="row">
               <div class="col-xs-12">
-                <p class="help-block">Adding an icon won't replace the chosen color. The colour will be shown underneath the icon.</p>
+                <p class="help-block">Adding an icon won't replace the chosen color. The color will be shown underneath the icon.</p>
               </div>
             </div>
 
@@ -242,7 +242,7 @@
 
             <div class="row">
               <div class="col-xs-12">
-                <p class="help-block">Adding an image will override the chosen colour chosen. However if the image has transparency, the colour will be shown underneath.</p>
+                <p class="help-block">Adding an image will override the chosen color chosen. However if the image has transparency, the color will be shown underneath.</p>
               </div>
             </div>
 
