--- a/build.html
+++ b/build.html
@@ -30,6 +30,9 @@
         {{#if description}}
         <p>{{nl2br description}}</p>{{/if}}
       </div>
+      <span class="list-icon">
+        <i class="fa fa-angle-right"></i>
+      </span>
     </li>
     {{/each}}
   </ul>
@@ -45,6 +48,9 @@
         <p class="list-title">List item 1</p>
         <p>This is a default item, edit your list's settings to configure your content. Don't forget to view your app on different devices by changing the device preview.</p>
       </div>
+      <span class="list-icon">
+        <i class="fa fa-angle-right"></i>
+      </span>
     </li>
     <li class="">
       <div class="list-image" style="background-color: #c7c7c7;">
@@ -54,6 +60,9 @@
         <p class="list-title">List item 2</p>
         <p>This is a default item, edit your list's settings to configure your content. Don't forget to view your app on different devices by changing the device preview.</p>
       </div>
+      <span class="list-icon">
+        <i class="fa fa-angle-right"></i>
+      </span>
     </li>
     <li class="">
       <div class="list-image" style="background-color: #c7c7c7;">
@@ -63,6 +72,9 @@
         <p class="list-title">List item 3</p>
         <p>This is a default item, edit your list's settings to configure your content. Don't forget to view your app on different devices by changing the device preview.</p>
       </div>
+      <span class="list-icon">
+        <i class="fa fa-angle-right"></i>
+      </span>
     </li>
   </ul>
 </div>
