--- a/build.html
+++ b/build.html
@@ -1,5 +1,5 @@
 {{#if items.length}}
-<div data-list-thumb-l-id="{{id}}" data-filter-id="{{id}}" data-list-thumb-s-uuid="{{uuid}}" class="list list-thumb-l {{#if swipeToSave}}list-swipe-save{{/if}}">
+<div data-list-thumb-l-id="{{id}}" data-filter-id="{{id}}" data-list-uuid="{{uuid}}" data-list-thumb-s-uuid="{{uuid}}" class="list list-thumb-l {{#if swipeToSave}}list-swipe-save{{/if}}">
   {{#if swipeToSave}}
   <div class="filter-wrapper">
     <ul class="list-save-filter">
