--- a/interface.html
+++ b/interface.html
@@ -199,7 +199,7 @@
                 <label for="list-item-desc-\{{id}}">Description</label>
               </div>
               <div class="col-sm-8">
-                <textarea class="form-control list-item-desc" id="list-item-desc-\{{id}}" name="list-item-desc-\{{id}}" placeholder="Enter description" rows="2"></textarea>
+                <textarea class="form-control list-item-desc" id="list-item-desc-\{{id}}" name="list-item-desc-\{{id}}" rows="2"></textarea>
               </div>
             </div>
 
